--- a/all/views/show.ejs
+++ b/all/views/show.ejs
@@ -46,18 +46,25 @@
 
 
 
+<% if(trailer.videos.results.length==0){ %>
 
-            <div class="pp">
-                  <div class="trailer-box">
+<% }else{ %>
+      <div class="pp">
+            <div class="trailer-box">
 
 
-                       
+                 
 
-                              <iframe width="100%" height="400" src="https://www.youtube.com/embed/<%= trailer.videos.results[0].key %>?start=5" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-
-                  </div>
+                        <iframe width="100%" height="400" src="https://www.youtube.com/embed/<%= trailer.videos.results[0].key %>?start=5" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
             </div>
+
+      </div>
+<% } %>
+            
+
+
+
 <div class="container">
        
 
