--- a/all/views/showtv.ejs
+++ b/all/views/showtv.ejs
@@ -37,16 +37,25 @@
 
 
             </div>
+<% if(trailer.results.length==0){ %>
 
-            <div class="pp">
-                        <div class="trailer-box">
-                       
-                              
-                                <iframe width="100%" height="400" src="https://www.youtube.com/embed/<%= trailer.results[0].key %>?start=5" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                         
-        
-                        </div>
-                        </div>
+<% }else{ %>
+      <div class="pp">
+            <div class="trailer-box">
+           
+                 <% if(item.id==1399){ %>
+                  
+                        <iframe width="100%" height="400" src="https://www.youtube.com/embed/<%= trailer.results[1].key %>?start=5" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                  <% }else{ %>
+                        <iframe width="100%" height="400" src="https://www.youtube.com/embed/<%= trailer.results[0].key %>?start=5" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+             
+
+                  <% } %>
+                    
+            </div>
+            </div>
+<% } %>
+           
 
 <div class="container">
 
