--- a/all/views/discover.ejs
+++ b/all/views/discover.ejs
@@ -203,6 +203,49 @@
 
 
 </form>
+<div class="disbox">
+<div class="a">
+  <div class="container">
+    
 
+      <h1 class="mt-name"><%= myhead %></h1>
+   
+        
+        <div class="p">
+      <div class="row" style="display: flex; flex-wrap: wrap">
+<% movies.results.forEach(function(movie){ %>
+  <% if(movie.poster_path==null){ %>
+          
+                 <% } else{ %>
+                  <div class="col-sm-6 col-md-4 col-lg-4">
+                    
+                    
+                      <form action="/getmov" method="POST">
+                       
+                        <input type="image" name="movnm" value="<%= movie.id %>"  src="https://image.tmdb.org/t/p/w500<%= movie.poster_path %>" style="width: 100%">
+              
+                
+                      <h3 class="mt-name"><%= movie.title %></h3>
+                     
+           
+                    </form>
+                  
+                   
+                       
+
+                 
+
+
+
+            
+              
+            </div>
+            <% } %>
+ <%  })  %>
+</div>
+</div>
+</div>
+</div>
+</div>
 
 <% include partials/footer.ejs %>
