--- a/all/views/showtv.ejs
+++ b/all/views/showtv.ejs
@@ -60,7 +60,7 @@
 <div class="container">
 
       
-            <h1 class="cast-name">Cast And Crew</h1>
+            <h1 class="cast-name" style="padding-left: 38%">Cast And Crew</h1>
             <div class="p">
                         <div class="row" style="display: flex; flex-wrap: wrap">
                             
@@ -76,7 +76,7 @@
                                                 <img src="https://image.tmdb.org/t/p/w500<%= cast.profile_path %>" style="width: 100%">
                                     
                                   
-                                        <h3 class="cast-name"><%= cast.name %></h3>
+                                        <h3 class="cast-name" style="text-align: center"><%= cast.name %></h3>
                                     
                                   
                                 
@@ -92,7 +92,7 @@
                   <% if(reviews.results.length==0){ %>
 
                         <% }else{ %>
-                              <h2 class="rev cast-name">Reviews</h2>
+                              <h2 class="rev cast-name" style="padding-left: 40%">Reviews</h2>
                        <% } %>
                         
             <div class="review-box">
