--- a/all/views/discussion.ejs
+++ b/all/views/discussion.ejs
@@ -17,7 +17,7 @@
 
 
 
-<h1 style="color:white">Recent Discussions</h1>
+<h1 style="color:white; margin-top:90px">Recent Discussions</h1>
 
 <% if(all==null){ %>
 
@@ -27,7 +27,7 @@
     <div class="panel-heading">
       <h2 class="panel-title"><%= discuss.title %> discussion started by-<%= discuss.username %></h2>
     </div>
-    <div class="panel-body" style="background: black">
+    <div class="panel-body" >
         
       <h3  style="color: cornflowerblue"><%= discuss.description %></h3>
 
