--- a/all/views/partials/header.ejs
+++ b/all/views/partials/header.ejs
@@ -38,7 +38,7 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
 
-          <li><a href="/trending-all/1">Home<span class="sr-only">(current)</span></a></li>
+          <li><a href="/trending-movies/1">Home<span class="sr-only">(current)</span></a></li>
 
           <!-- <li><a href="#">Link</a></li> -->
 
