--- a/all/views/partials/footer.ejs
+++ b/all/views/partials/footer.ejs
@@ -22,16 +22,41 @@
           
         </ul>
       </nav>
-      <hr class="style-one">
+      
     </div>
-    <div class="down"> 
-      <div style="width:300px; margin:auto; margin-top:30px;margin-left: 570px;padding-top:30px">
-          <img class="button" src="/assets/fb.png" style="height: 40px; width:40px">
-        <img class="button" src="/assets/insta.png" style="height: 40px; width:40px">
-        <img class="button" src="/assets/twi.png" style="height: 40px; width:40px">
-      </div>
+    <hr class="style-one">
+<div class="down">
+    <div class="row container"> 
+    
+      <div class="col-lg-6 col-md-6 col-sm-6" style="padding-left:20px;">
+        <div style="width: 20%; margin: auto; margin-top: 10%">
+           <h4><span class="glyphicon glyphicon-home" aria-hidden="true" style="color: antiquewhite"></span><a href="/home" style="color: white"> Home</a></h4> 
+          <h4><span class="glyphicon glyphicon-facetime-video" aria-hidden="true" style="color: antiquewhite"></span><a href="/trending-movies/1" style="color: white"> Movies</a></h4>  
+          <h4><span class="glyphicon glyphicon-film" aria-hidden="true" style="color: antiquewhite"></span><a href="/trending-tvshows/1" style="color: white"> TV Shows</a></h4>  </div>
         
       </div>
+    <div class="col-lg-6 col-md-6 col-sm-6"><div style="padding-left: 40%;padding-top:2%">
+        <h3 style="color: wheat; padding-left:10%">Contact Us!</h3>
+        <img class="button" src="/assets/fb.png" style="height: 40px; width:40px">
+        <img class="button" src="/assets/insta.png" style="height: 40px; width:40px">
+        <img class="button" src="/assets/twi.png" style="height: 40px; width:40px">
+        <div style="padding-left: 10%">
+            <h4><a href="https://www.linkedin.com/in/rahuldeverani/" target="blank" style="color: white">Rahul Deverani</a></h4>
+            <h4><a href="https://www.linkedin.com/in/upendra-sharma-20106815a/" target="blank" style="color: white">Upendra Sharma</a></h4>
+        </div>
+        
+    </div>
+       
+   
+  </div>
+  </div>
+  <div class="row">
+    <h4 style="color: wheat; padding-left:42%">Powered by TMDB</h4>
+  </div>
+
+</div>
+  
+   
      <!--/.footer-bottom--> 
 
 <!-- ovi class end -->
