--- a/all/public/style.css
+++ b/all/public/style.css
@@ -9,7 +9,7 @@ background-color: black;
 width: 100%;
 margin-bottom: 0; 
 position: absolute;
-height: 200px;
+
 }
 .sel1{
 width: 100%;
@@ -28,12 +28,7 @@ width: 100%;
  
 }
 
-#bt{
 
-width:360px;
-margin: 20px auto;
-
-}
 .infobtn{
 width:50%;
 margin:10px auto;
@@ -147,4 +142,9 @@ html {
 .formdiv{
 
     width: 100%;
+}
+#bt{
+    padding-left:8%;
+    width: 50%;
+    margin: auto;
 }
