--- a/all/views/partials/header1.ejs
+++ b/all/views/partials/header1.ejs
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Movie Mania!</title>
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/television.png" />
+    <title>Cinema Visor</title>
     <link rel="stylesheet" href="/style.css" type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script
@@ -101,7 +102,9 @@
           <li><a href="/users/register">Sign Up</a></li>
          <% } %>
          <li><a href="/discuss">Discuss</a></li>
+         <% if(user){ %>
           <li class="dropdown">
+              
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">You
               <span class="caret"></span></a>
             <ul class="dropdown-menu">
@@ -112,6 +115,7 @@
               <li><a href="/users/logout">Logout</a></li>
             </ul>
           </li>
+        <% } %>
         </ul>
 
 
