--- a/all/views/show.ejs
+++ b/all/views/show.ejs
@@ -77,18 +77,11 @@
                                   
                                          <% } else{ %>
                                           <div class="col-sm-6 col-md-3 col-lg-3">
-                                           
-                                             
-                                              
-                                            
-                                                      <img src="https://image.tmdb.org/t/p/w500<%= cast.profile_path %>" style="width: 100%">
-                                          
-                                        
-                                              <h3 class="cast-name" style="text-align: center"><%= cast.name %></h3>
-                                          
-                                        
-                                      
-                                    </div>
+                                                      <form action="/getpeople" method="POST">
+                                                      <input type="image" name="personName" value="<%= cast.id %>"  src="https://image.tmdb.org/t/p/w500<%= cast.profile_path %>" style="width: 100%">
+                                              <h3 class="cast-name"><%= cast.name %></h3>
+                                          </form>
+                                          </div>
                                     <% } %>
                          <%  })  %>
                         </div>
@@ -124,7 +117,7 @@
                               <div class="panel panel-primary">
                                     <div class="panel-heading">
                                           <h3 class="panel-title rev">
-                                                <%= review.author %>
+                                                A Review by<%= review.author %>
                                           </h3>
                                     </div>
                                     <div class="panel-body">
@@ -136,6 +129,12 @@
 
             </div>
      
-       
+            <style>
+                        .panel-body
+                        {
+                              color: white;
+                              background-color: black;
+                        }
+                        </style>
 
             <% include partials/footer.ejs %>
