--- a/all/views/discussion.ejs
+++ b/all/views/discussion.ejs
@@ -29,7 +29,7 @@
     </div>
     <div class="panel-body" >
         
-      <h3  style="color: cornflowerblue"><%= discuss.description %></h3>
+      <h3  style="color: white  ; font-family: 'Roboto', sans-serif; font-size: 20px"><%= discuss.description %></h3>
 
 
 
@@ -53,5 +53,14 @@
 
 <% } %>
 
+<style>
+    .panel-body
+    {
+          color: white;
+          background-color: black;
+          
+  
+    }
+    </style>
 
 <% include partials/footer.ejs %>
