Fixed discover search ui

--- a/all/public/style.css
+++ b/all/public/style.css
@@ -128,7 +128,7 @@ margin-top:30px;
 .mt-name{
     
     color: white;
-    padding-left: 30px;
+   
 }
 html {
     position: relative;
@@ -147,4 +147,15 @@ html {
     padding-left:8%;
     width: 50%;
     margin: auto;
+}
+.Dis-search{
+
+margin-left:20%
+
+}
+.myhead{
+
+    width:30%;
+    margin: auto;
+    color: white;
 }
