--- a/all/views/discover.ejs
+++ b/all/views/discover.ejs
@@ -130,79 +130,76 @@
 
                  <div class="container">
 
-
-    <form class="form-inline" action="/discoversearch" method="POST" >
-        <div class="search col-md-8 col-sm-8 col-xs-8">
-          <label class="sr-only" for="inlineFormInputName2">Name</label>
-          <input id="myinp" type="text" name="name"class="form-control mb-2 mr-sm-2" id="inlineFormInputName2" placeholder="Search Movies And Tv Shows">
-        </div>
-        <div class="search col-md-2 col-sm-2 col-xs-2">
-          <label class="sr-only" for="inlineFormInputGroupUsername2">Preferance</label>
-          <div class="input-group mb-2 mr-sm-2">
-              <select class="form-control" id="sel1" name="selval" >
-                  <option>Movies</option>
-                  <option>Tv-Shows</option>
-                </select>
-           
-          </div>
-        
-        
-          
-          
-        </div>
-        <div class="search col-md-2 col-sm-2 col-xs-2"><button type="submit" class="btn  btn-dark">Let's Go!</button></div>
-        
+<div class="Dis-search"><form class="form-inline" action="/discoversearch" method="POST" >
+       
+  <div class="search col-md-2 col-sm-2">
+    <label class="sr-only" for="inlineFormInputGroupUsername2">Preferance</label>
+    <div class="input-group mb-2 mr-sm-2">
+        <select class="form-control" id="sel1" name="selval" >
+            <option>Movies</option>
+            <option>Tv-Shows</option>
+          </select>
+     
+    </div>
+  
+  
+    
+    
+  </div>
+  
+  
 
 
 
 
 
 <div class="search col-md-2 col-sm-2">
-    <label class="sr-only" for="inlineFormInputGroupUsername2">Preferance</label>
-    <div class="input-group mb-2 mr-sm-2">
-        <select class="form-control" id="sel1" name="genre" >
-            <option>Action</option>
-            <option>Adventure</option>
-            <option>Animation</option>
-       
-            <option>Drama</option>
-            <option>Family</option>
-            <option>Romance</option>
-            <option>Comedy</option>
-            <option>Fantasy</option>
-            <option>Horror</option>
-            <option>Sci-Fi</option>
-         
-          </select>
-     
-    </div>
+<label class="sr-only" for="inlineFormInputGroupUsername2">Preferance</label>
+<div class="input-group mb-2 mr-sm-2">
+  <select class="form-control" id="sel1" name="genre" >
+      <option>Action</option>
+      <option>Adventure</option>
+      <option>Animation</option>
+ 
+      <option>Drama</option>
+      <option>Family</option>
+      <option>Romance</option>
+      <option>Comedy</option>
+      <option>Fantasy</option>
+      <option>Horror</option>
+      <option>Sci-Fi</option>
    
+    </select>
+
+</div>
+
+
+</div>
+
+
+<div class="search col-md-2 col-sm-2" >
+<label class="sr-only" for="inlineFormInputGroupUsername2">Preferance</label>
+<div class="input-group mb-2 mr-sm-2">
+  <select class="form-control" id="sel1" name="secpref" >
+      <option>popularity.desc</option>
+      <option>popularity.asc</option>
+      <option>release_date.asc</option>
+      <option>release_date.desc</option>
+      <option>vote_averge.asc</option>
+      <option>vote_averge.desc</option>
+      <option>release_date.asc</option>
+      <option>release_date.desc</option>
+      <option>revenue.asc</option>
+      <option>revenue.desc</option>
+    </select>
+
+</div>
+
+</div>
+<div class="search col-md-2 col-sm-2 col-xs-2"><button type="submit" class="btn  btn-dark">Let's Go!</button></div>
+
+</form></div>
     
-  </div>
-
-
-  <div class="search col-md-2 col-sm-2">
-    <label class="sr-only" for="inlineFormInputGroupUsername2">Preferance</label>
-    <div class="input-group mb-2 mr-sm-2">
-        <select class="form-control" id="sel1" name="secpref" >
-            <option>popularity.desc</option>
-            <option>popularity.asc</option>
-            <option>release_date.asc</option>
-            <option>release_date.desc</option>
-            <option>vote_averge.asc</option>
-            <option>vote_averge.desc</option>
-            <option>release_date.asc</option>
-            <option>release_date.desc</option>
-            <option>revenue.asc</option>
-            <option>revenue.desc</option>
-          </select>
-     
-    </div>
-
-  </div>
-
-
-</form>
 <div class="disbox">
 <div class="a">
   <div class="container">
@@ -232,11 +229,7 @@
                   
                    
                        
-
                  
-
-
-
             
               
             </div>
