--- a/all/views/discover.ejs
+++ b/all/views/discover.ejs
@@ -196,7 +196,7 @@
 </div>
 
 </div>
-<div class="search col-md-2 col-sm-2 col-xs-2"><button type="submit" class="btn  btn-dark">Let's Go!</button></div>
+<div class="search col-md-2 col-sm-2 col-xs-2"><button type="submit" class="btn  btn-primary">Let's Go!</button></div>
 
 </form></div>
     
