Changed headers and footers on some pages

--- a/all/views/showtv.ejs
+++ b/all/views/showtv.ejs
@@ -74,7 +74,7 @@
 
                                                       <input type="image" name="personName" value="<%= cast.id %>" src="https://image.tmdb.org/t/p/w500<%= cast.profile_path %>"
                                                             style="width: 100%">
-                                                      <h3 class="cast-name">
+                                                      <h3 class="cast-name" style="text-align: center">
                                                             <%= cast.name %>
                                                       </h3>
                                                 </form>
