--- a/all/views/register.ejs
+++ b/all/views/register.ejs
@@ -1,5 +1,13 @@
 <% include partials/header1 %>
-
+<div class="container">
+    <% if(success_msg){ %>
+      <div class="alert alert-success"><%= success_msg %></div> 
+       <% } else if(error_msg){ %>  
+         <div class="alert alert-warning"><%= error_msg %></div>
+       <% } else if(error){ %> 
+         <div class="alert alert-danger"><%= error %></div>
+      <% } %>
+      
   <% if(error){ %>
 
     <% error.forEach(function(err){ %>
