Added contact links and fixed some styles

--- a/all/views/partials/footer.ejs
+++ b/all/views/partials/footer.ejs
@@ -5,23 +5,25 @@
 
 
 
+<div>
+  <nav aria-label="Bottom" id="bt">
+    <ul class="pagination">
+      
+      <li class="page-item"><a class="page-link" href="1">1</a></li>
+      <li class="page-item">
+        <a class="page-link" href="2">2</a>
+      </li>
+      <li class="page-item"><a class="page-link" href="3">3</a></li>
+      <li class="page-item"><a class="page-link" href="3">4</a></li>
+      <li class="page-item"><a class="page-link" href="3">5</a></li>
+      <li class="page-item"><a class="page-link" href="3">6</a></li>
+      <li class="page-item"><a class="page-link" href="3">7</a></li>
+      <li class="page-item"><a class="page-link" href="3">8</a></li>
+      
+    </ul>
+  </nav>
+</div>
 
-<nav aria-label="Bottom nav" id="bt">
-        <ul class="pagination">
-          
-          <li class="page-item"><a class="page-link" href="1">1</a></li>
-          <li class="page-item">
-            <a class="page-link" href="2">2</a>
-          </li>
-          <li class="page-item"><a class="page-link" href="3">3</a></li>
-          <li class="page-item"><a class="page-link" href="3">4</a></li>
-          <li class="page-item"><a class="page-link" href="3">5</a></li>
-          <li class="page-item"><a class="page-link" href="3">6</a></li>
-          <li class="page-item"><a class="page-link" href="3">7</a></li>
-          <li class="page-item"><a class="page-link" href="3">8</a></li>
-          
-        </ul>
-      </nav>
       
     </div>
     <hr class="style-one">
@@ -37,9 +39,10 @@
       </div>
     <div class="col-lg-6 col-md-6 col-sm-6"><div style="padding-left: 40%;padding-top:2%">
         <h3 style="color: wheat; padding-left:10%">Contact Us!</h3>
-        <img class="button" src="/assets/fb.png" style="height: 40px; width:40px">
+        <a href="https://www.facebook.com/Ent0070" target="blank" style="color: aliceblue"><img class="button" src="/assets/fb.png" style="height: 40px; width:40px"></a>
+
         <img class="button" src="/assets/insta.png" style="height: 40px; width:40px">
-        <img class="button" src="/assets/twi.png" style="height: 40px; width:40px">
+        <a href="https://twitter.com/RahulDeverani" target="blank" style="color: aliceblue"><img class="button" src="/assets/twi.png" style="height: 40px; width:40px"></a>
         <div style="padding-left: 10%">
             <h4><a href="https://www.linkedin.com/in/rahuldeverani/" target="blank" style="color: white">Rahul Deverani</a></h4>
             <h4><a href="https://www.linkedin.com/in/upendra-sharma-20106815a/" target="blank" style="color: white">Upendra Sharma</a></h4>
