--- a/all/public/style.css
+++ b/all/public/style.css
@@ -52,7 +52,8 @@ margin-top:7%;
 }
 .trailer-box{
 
-width:800px;
+width:80%;
+height: 50%;
 margin-top:100px;
 margin-left:auto;
 margin-right: auto;
