--- a/all/views/index.ejs
+++ b/all/views/index.ejs
@@ -21,7 +21,7 @@
                         <input type="image" name="movnm" value="<%= movie.id %>"  src="https://image.tmdb.org/t/p/w500<%= movie.poster_path %>" style="width: 100%">
               
                 
-                      <h3 class="mt-name"><%= movie.title %></h3>
+                      <h3 class="mt-name" style="text-align: center"><%= movie.title %></h3>
                      
            
                     </form>
