--- a/all/views/show.ejs
+++ b/all/views/show.ejs
@@ -55,7 +55,7 @@
 
                  
 
-                        <iframe width="100%" height="400" src="https://www.youtube.com/embed/<%= trailer.videos.results[0].key %>?start=5" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                        <iframe width="100%" height="400px" src="https://www.youtube.com/embed/<%= trailer.videos.results[0].key %>?start=5" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
             </div>
 
